增加多表联合的grid显示处理

--- a/autodb/templates/sqllist.html
+++ b/autodb/templates/sqllist.html
@@ -29,8 +29,10 @@
     <div property="columns">
         <div type="indexcolumn"></div>
         <div type="checkcolumn"></div>
-        <div field="title"  headerAlign="center">标题
+        <div field="title" headerAlign="center">标题
             <input property="editor" class="mini-textbox" style="width:100%;"/>
+        </div>
+        <div field="state" headerAlign="center">
         </div>
         <div field="sqlcontent" allowSort="true" headerAlign="center">sql
         <input property="editor" class="mini-textarea" style="width:100%;height:100px;" minWidth="200" minHeight="100">
