add permission process

--- a/autodb/templates/permission.html
+++ b/autodb/templates/permission.html
@@ -29,10 +29,12 @@
     <div property="columns">
         <div type="indexcolumn"></div>
         <div type="checkcolumn"></div>
-        <div field="title" headerAlign="center">标题
+        <div field="groupid" headerAlign="center">groupid
             <input property="editor" class="mini-textbox" style="width:100%;"/>
         </div>
-
+        <div field="moduleid" headerAlign="center">moduleid
+            <input property="editor" class="mini-textbox" style="width:100%;"/>
+        </div>
     </div>
 </div>
 <br>
