add permission process

--- a/autodb/templates/permission.html
+++ b/autodb/templates/permission.html
@@ -2,44 +2,63 @@
 {% block content %}
 <div style="width:100%;">
     <div class="mini-toolbar" style="border-bottom:0;padding:0px;">
-        <table style="width:100%;">
-            <tr>
-                <td style="width:100%;">
-                    <a class="mini-button" iconCls="icon-add" onclick="addRow()" plain="true" tooltip="增加...">增加</a>
-                    <a class="mini-button" iconCls="icon-remove" onclick="removeRow()" plain="true">删除</a>
-                    <span class="separator"></span>
-                    <a class="mini-button" iconCls="icon-save" onclick="saveData()" plain="true">保存</a>
 
-                </td>
-                <td style="white-space:nowrap;">
-                    <input id="key" class="mini-textbox" emptyText="请输入关键字" style="width:150px;" onenter="onKeyEnter"/>
-                    <a class="mini-button" onclick="search()">查询</a>
-                </td>
-            </tr>
-        </table>
+
+        <a class="mini-button" iconCls="icon-remove" onclick="removeRow('datagm')" plain="true">删除</a>
+        <span class="separator"></span>
+        <a class="mini-button" iconCls="icon-save" onclick="saveData()" plain="true">保存</a>
+
     </div>
 </div>
 
 <div id="datagrid1" class="mini-datagrid" allowResize="true"
-     url="{{url_for('.get',getdata=1)}}" idField="guid"
+     url="{{url_for('.modulelist',getdata=1)}}" idField="guid"
      allowAlternating="true" selectOnLoad="true"
-
+     onselectionchanged="onSelectionChanged"
      allowCellEdit="true" allowCellSelect="true"
-     editNextOnEnterKey="true" editNextRowCell="true" >
+     editNextOnEnterKey="true" editNextRowCell="true">
     <div property="columns">
         <div type="indexcolumn"></div>
-        <div type="checkcolumn"></div>
-        <div field="groupid" headerAlign="center">groupid
-            <input property="editor" class="mini-textbox" style="width:100%;"/>
+        <div field="guid" headerAlign="center">moduleid</div>
+        <div field="url" headerAlign="center">访问路径
+
         </div>
-        <div field="moduleid" headerAlign="center">moduleid
-            <input property="editor" class="mini-textbox" style="width:100%;"/>
+        <div field="module" headerAlign="center">模块名称
+
+        </div>
+        <div field="doc" headerAlign="center">描述
+
         </div>
     </div>
 </div>
 <br>
+<div style="width:100%;">
+    <div class="mini-toolbar" style="border-bottom:0;padding:0px;">
+        <table style="width:100%;">
+            <tr>
+                <td style="width:100%;">
+                    <a class="mini-button" iconCls="icon-add" onclick="addRow('datagm')" plain="true"
+                       tooltip="增加...">增加</a>
+                    <a class="mini-button" iconCls="icon-remove" onclick="removeRow('datagm')" plain="true">删除</a>
+                    <span class="separator"></span>
+                    <a class="mini-button" iconCls="icon-save" onclick="saveData()" plain="true">保存</a>
 
+                </td>
 
+            </tr>
+        </table>
+    </div>
+</div>
+<div id="datagm" class="mini-datagrid" allowResize="true"
+     url="{{url_for('.group_module',getdata=1)}}" idField="guid" multiSelect="true">
+    <div property="columns">
+        <div type="indexcolumn"></div>
+        <div type="checkcolumn"></div>
+        <div field="moduleid" headerAlign="center">moduleid</div>
+        <div field="groupid" headerAlign="center">groupid</div>
+
+    </div>
+</div>
 
 
 <script type="text/javascript">
@@ -47,12 +66,19 @@
 
     var grid = mini.get("datagrid1");
     grid.load();
-
+    var datagm = mini.get("datagm")
     function saveData() {
 
-         saveGrid(grid, "{{url_for('.save')}}")
+        saveGrid(grid, "{{url_for('.save_g_m')}}")
     }
+    function onSelectionChanged(e) {
 
+        var grid = e.sender;
+        var record = grid.getSelected();
+        if (record) {
+            datagm.load({ mguid: record.guid });
+        }
+    }
 
 </script>
 
