--- a/autodb/templates/permission.html
+++ b/autodb/templates/permission.html
@@ -1,15 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div style="width:100%;">
-    <div class="mini-toolbar" style="border-bottom:0;padding:0px;">
 
-
-        <a class="mini-button" iconCls="icon-remove" onclick="removeRow('datagm')" plain="true">删除</a>
-        <span class="separator"></span>
-        <a class="mini-button" iconCls="icon-save" onclick="saveData()" plain="true">保存</a>
-
-    </div>
-</div>
 
 <div id="datagrid1" class="mini-datagrid" allowResize="true"
      url="{{url_for('.modulelist',getdata=1)}}" idField="guid"
@@ -20,6 +11,7 @@
     <div property="columns">
         <div type="indexcolumn"></div>
         <div field="guid" headerAlign="center">moduleid</div>
+        <div field="state" headerAlign="center">状态</div>
         <div field="url" headerAlign="center">访问路径
 
         </div>
