--- a/autodb/templates/menutree.html
+++ b/autodb/templates/menutree.html
@@ -1,45 +1,80 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>增加、删除、修改节点</h1>
 
-<input type="button" value="插入节点(前)" onclick="onAddBefore()"/>
-<input type="button" value="插入节点(后)" onclick="onAddAfter()"/>
-<input type="button" value="插入节点(子节点)" onclick="onAddNode()"/>
-<input type="button" value="保存" onclick="saveData()" style="margin-left:30px;font-weight:bold;"/>
-<br/>
-<input type="button" value="编辑节点" onclick="onEditNode()"/>
-<input type="button" value="删除节点" onclick="onRemoveNode()"/>
-<ul id="tree1" class="mini-tree" url="{{url_for('permission.getMenu')}}" style="width:200px;padding:5px;"
-    showTreeIcon="true" textField="text" idField="id"
-    parentField="pid" resultAsTree="false"
-    allowDrag="true" allowDrop="true"
-    onnodeselect="onNodeSelect"
-        >
-</ul>
+<link href="http://www.8dat.com/miniui_php/demo/demo.css" rel="stylesheet" type="text/css"/>
+<style type="text/css">
+    body {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+</style>
+<div class="mini-splitter" style="width:100%;height:100%;">
+    <div size="240" showCollapseButton="true">
 
-<div id="form1">
-    <table>
+        <div class="mini-toolbar" style="padding:2px;border-top:0;border-left:0;border-right:0;">
+            <a class="mini-button" iconCls="icon-save" onclick="saveData()">保存菜单</a>
+            <a class="mini-button" iconCls="icon-remove" onclick="onRemoveNode()">删除节点</a>
+            <a class="mini-button" iconCls="icon-addfolder" onclick="onAddBefore()">增加节点</a>
+            <a class="mini-button" iconCls="icon-addnew" onclick="onAddNode()">增加子节点</a>
 
-        <tr>
-            <td>
-                <label>模块：</label>
-            </td>
-            <td>
-                <input id="textbox1" name="modulename" class="mini-textbox"/>
-            </td>
-            <td>
-                <label>url：</label>
-            </td>
-            <td>
-                <input id="text1" name="url" class="mini-textbox"/>
-            </td>
-            <td>
-                <input id="txb2" name="pid" class="mini-textbox"/>
-            </td>
-        </tr>
-    </table>
+        </div>
+        <div class="mini-fit">
+            <ul id="tree1" class="mini-tree" url="{{url_for('permission.getMenu')}}" style="width:200px;padding:5px;"
+                showTreeIcon="true"
+                textField="text" idField="id" parentField="pid" resultAsTree="false"
+                allowDrag="true" allowDrop="true"
+                onnodeselect="onNodeSelect"
+                expandOnLoad="0"
+                allowLeafDropIn="true"
+                    >
+            </ul>
+        </div>
+    </div>
+    <div showCollapseButton="true">
+        <div class="mini-toolbar" style="padding:2px;border-top:0;border-left:0;border-right:0;">
+            <a class="mini-button" iconCls="icon-save" plain="true" onclick="saveform()">保存</a>
+        </div>
+        <div class="mini-fit">
+            <div id="form1">
+                <table>
+
+                    <tr>
+                        <td>
+                            <label>模块：</label>
+                        </td>
+                        <td>
+                            <input id="textbox1" name="modulename" class="mini-textbox"/>
+                        </td>
+                        <td>
+                            <label>url：</label>
+                        </td>
+                        <td>
+                            <input id="text1" name="url" class="mini-textbox"/>
+                        </td>
+                        <td>
+                            <label>pid：</label>
+                        </td>
+                        <td>
+                            <input id="txb2" name="pid" class="mini-textbox"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label>菜单名称：</label>
+                        </td>
+                        <td>
+                            <input id="txbtext" name="text" class="mini-textbox"/>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
-<input type="button" value="确定" onclick="CloseWindow()"/>
 
 
 <script type="text/javascript">
@@ -52,13 +87,6 @@
         var newNode = {};
         tree.addNode(newNode, "before", node);
     }
-    function onAddAfter(e) {
-        var tree = mini.get("tree1");
-        var node = tree.getSelectedNode();
-
-        var newNode = {};
-        tree.addNode(newNode, "after", node);
-    }
     function onAddNode(e) {
         var tree = mini.get("tree1");
         var node = tree.getSelectedNode();
@@ -66,24 +94,19 @@
         var newNode = {};
         tree.addNode(newNode, "add", node);
     }
-    function onEditNode(e) {
-        var tree = mini.get("tree1");
-        var node = tree.getSelectedNode();
 
-        tree.beginEdit(node);
-    }
     function onNodeSelect(e) {
         var form = new mini.Form("form1");
 
         var node = e.node;
         var isLeaf = e.isLeaf;
 
-        if (isLeaf) {
-
-            form.setData(node);
+        if (node.id == undefined) {
+            alert('请先保存');
         }
-        else{
-            form.reset();
+        else {
+            form.setData(node);
+
         }
     }
 
@@ -108,14 +131,15 @@
         var tree = mini.get("tree1");
         var data = tree.getData();
         var json = mini.encode(data);
-
+        var removed = mini.encode(tree.getChanges("removed"));
         var msgid = mini.loading("数据保存中，请稍后......", "保存数据");
         $.ajax({
             url: "{{url_for('permission.savemenu')}}",
-            data: { data: json },
+            data: { data: json, removed: removed },
             type: "post",
             success: function (text) {
                 mini.hideMessageBox(msgid);
+                tree.load("{{url_for('permission.getMenu')}}");
             },
             error: function (jqXHR, textStatus, errorThrown) {
                 alert(jqXHR.responseText);
@@ -124,7 +148,7 @@
     }
 
 
-    function CloseWindow() {
+    function saveform() {
         var form = new mini.Form("form1");
 
         var tree = mini.get("tree1");
@@ -132,7 +156,7 @@
         var node = tree.getSelectedNode();
         options = mini.clone(options);
         tree.updateNode(node, options);
-
+        alert('保存成功');
 
     }
 </script>
