更换提示信息样式

--- a/autodb/templates/base.html
+++ b/autodb/templates/base.html
@@ -6,9 +6,9 @@
 
     <meta charset="utf-8"/>
     {% if title %}
-    <title>{{ title }} - 数据库任务系统</title>
+    <title>{{ title }} - 东营联通信息化服务中心综合支撑平台</title>
     {% else %}
-    <title>数据库任务系统</title>
+    <title>东营联通信息化服务中心综合支撑平台</title>
     {% endif %}
 
 
