--- a/autodb/templates/index.html
+++ b/autodb/templates/index.html
@@ -14,7 +14,7 @@
     }
 
     .header {
-        background: url(header.gif) repeat-x;
+
     }
 
     .header div {
@@ -38,7 +38,7 @@
 <div class="mini-layout" style="width:100%;height:100%;">
     <div title="north" region="north" class="header" bodyStyle="overflow:hidden;" height="60" showHeader="false"
          showSplit="true">
-        <div>数据库任务系统</div>
+        <div>东营联通信息化服务中心综合支撑平台</div>
 
 
 
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div showHeader="false" region="south" style="border:0;text-align:center;" height="25" showSplit="false">
-        Copyright © 数据库自动任务
+        Copyright © {{year}} 东营联通信息化服务中心综合支撑平台
     </div>
     <div region="west" title="导航菜单" showHeader="true" bodyStyle="padding-left:1px;" showSplitIcon="true" width="230"
          minWidth="100" maxWidth="350">
